--- a/index.html
+++ b/index.html
@@ -304,5 +304,29 @@
       </section>
       <!-- /.section design -->
     </main>
+
+    <div class="modal">
+      <div class="modal__dialog">
+        <button class="modal__close"></button>
+        <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами </h3>
+        <form action="#" class="form madal__form">
+          <label for="user-name" class="label form__label">Имя</label>
+          <input type="text" class="input form__input" id="user-name">
+          <label for="user-phone" class="label form__label">Телефон</label>
+          <input type="tel" class="input form__input" id="user-phone">
+          <label for="user-email" class="label form__label">Email</label>
+          <input type="email" class="input form__input" id="user-email">
+          <div class="policy">
+            <input type="checkbox" name="policy-checkbox" id="policy-checkbox">
+            <label for="policy-checkbox" class="">Я соглашаюсь с обработкой данных</label>
+          </div>
+          <!-- /.policy -->
+          <button class="button button--primary madal__button">Отправить заявку</button>
+        </form>
+        <!-- /.form madal__form -->
+      </div>
+      <!-- /.madal__dialog -->
+    </div>
+    <!-- /.modal -->
   </body>
 </html>
