--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="tel:+79997683299" class="phone contacts__phone"
               >+7 (999) 768-32-99</a
             >
-            <button class="button contacts__button button--primary">
+            <button class="button contacts__button button--primary" data-toggle="modal">
               Заказать звонок
             </button>
           </div>
@@ -48,7 +48,7 @@
               времени до 45 дней и 20% от стоимости материалов за счет
               организации работы
             </p>
-            <button class="button hero__button button--primary">
+            <button class="button hero__button button--primary" data-toggle="modal">
               Рассчитать стоимость
             </button>
             <button class="button hero__button button--outline">
@@ -328,5 +328,6 @@
       <!-- /.madal__dialog -->
     </div>
     <!-- /.modal -->
+  <script src="js/main.js"></script>
   </body>
 </html>
