--- a/index.html
+++ b/index.html
@@ -92,22 +92,22 @@
                   <div class="card types__card">
                     <img src="img/types/type-1.jpg" alt="Косметический ремонт" class="card__image">
                     <div class="card__text">
-                      <h3 class="card__title">Косметический ремонт</h3>
+                      <h3 class="card__title card__maxmargin">Косметический ремонт</h3>
                       <!-- /.card__title -->
-                      <ul class="card__list">
-                        <li class="card__item">Демонтаж старых покрытий</li>
+                      <ul class="card__list card__maxmargin">
+                        <li class="card__item">• Демонтаж старых покрытий</li>
                         <!-- /.card__item -->
-                        <li class="card__item">Поклейка обоев</li>
+                        <li class="card__item">• Поклейка обоев</li>
                         <!-- /.card__item -->
-                        <li class="card__item">Роспись стен и потолков</li>
+                        <li class="card__item">• Роспись стен и потолков</li>
                         <!-- /.card__item -->
-                        <li class="card__item">Укладка полов</li>
+                        <li class="card__item">• Укладка полов</li>
                         <!-- /.card__item -->
-                        <li class="card__item">Замена сантехники</li>
+                        <li class="card__item">• Замена сантехники</li>
                         <!-- /.card__item -->
-                        <li class="card__item">Замена розеток и выключателей</li>
+                        <li class="card__item">• Замена розеток и выключателей</li>
                         <!-- /.card__item -->
-                        <li class="card__item">Замена дверей</li>
+                        <li class="card__item">• Замена дверей</li>
                         <!-- /.card__item -->
                       </ul>
                       <!-- /.card__list -->
@@ -123,22 +123,22 @@
                   <div class="card types__card">
                     <img src="img/types/type-2.jpg" alt="Капитальный ремонт" class="card__image">
                     <div class="card__text">
-                        <h3 class="card__title">Капитальный ремонт</h3>
+                        <h3 class="card__title card__minmargin">Капитальный ремонт</h3>
                         <!-- /.card__title -->
-                        <ul class="card__list">
-                          <li class="card__item">Демонтаж старых покрытий</li>
+                        <ul class="card__list card__minmargin">
+                          <li class="card__item">• Демонтаж старых покрытий</li>
                           <!-- /.card__item -->
-                          <li class="card__item">Поклейка обоев</li>
+                          <li class="card__item">• Поклейка обоев</li>
                           <!-- /.card__item -->
-                          <li class="card__item">Роспись стен и потолков</li>
+                          <li class="card__item">• Роспись стен и потолков</li>
                           <!-- /.card__item -->
-                          <li class="card__item">Укладка полов</li>
+                          <li class="card__item">• Укладка полов</li>
                           <!-- /.card__item -->
-                          <li class="card__item">Замена сантехники</li>
+                          <li class="card__item">• Замена сантехники</li>
                           <!-- /.card__item -->
-                          <li class="card__item">Замена розеток и выключателей</li>
+                          <li class="card__item">• Замена розеток и выключателей</li>
                           <!-- /.card__item -->
-                          <li class="card__item">Замена дверей</li>
+                          <li class="card__item">• Замена дверей</li>
                           <!-- /.card__item -->
                         </ul>
                         <!-- /.card__list -->
@@ -154,22 +154,22 @@
                   <div class="card types__card">
                     <img src="img/types/type-3.jpg" alt="Дизайнерский ремонт" class="card__image">
                     <div class="card__text">
-                        <h3 class="card__title">Дизайнерский ремонт</h3>
+                        <h3 class="card__title card__minmargin">Дизайнерский ремонт</h3>
                         <!-- /.card__title -->
-                        <ul class="card__list">
-                          <li class="card__item">Демонтаж старых покрытий</li>
+                        <ul class="card__list card__minmargin">
+                          <li class="card__item">• Демонтаж старых покрытий</li>
                           <!-- /.card__item -->
-                          <li class="card__item">Поклейка обоев</li>
+                          <li class="card__item">• Поклейка обоев</li>
                           <!-- /.card__item -->
-                          <li class="card__item">Роспись стен и потолков</li>
+                          <li class="card__item">• Роспись стен и потолков</li>
                           <!-- /.card__item -->
-                          <li class="card__item">Укладка полов</li>
+                          <li class="card__item">• Укладка полов</li>
                           <!-- /.card__item -->
-                          <li class="card__item">Замена сантехники</li>
+                          <li class="card__item">• Замена сантехники</li>
                           <!-- /.card__item -->
-                          <li class="card__item">Замена розеток и выключателей</li>
+                          <li class="card__item">• Замена розеток и выключателей</li>
                           <!-- /.card__item -->
-                          <li class="card__item">Замена дверей</li>
+                          <li class="card__item">• Замена дверей</li>
                           <!-- /.card__item -->
                         </ul>
                         <!-- /.card__list -->
@@ -206,19 +206,19 @@
             <div class="card design__card">
               <img src="img/design/design-1.jpg" alt="Минимальный" class="card__image">
               <div class="card__text">
-                  <h3 class="card__title">Минимальный</h3>
+                  <h3 class="card__title card__maxmargin">Минимальный</h3>
                   <!-- /.card__title -->
-                  <ul class="card__list">
-                    <li class="card__item">Измерительные чертежи</li>
+                  <ul class="card__list card__maxmargin">
+                    <li class="card__item">• Измерительные чертежи</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Перепланировка</li>
+                    <li class="card__item">• Перепланировка</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Планировка мебели</li>
+                    <li class="card__item">• Планировка мебели</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Сантехнический план</li>
+                    <li class="card__item">• Сантехнический план</li>
                   </ul>
                   <!-- /.card__list -->
-                  <strong class="card__pricetag">150 руб / м<sup>2</sup></strong>
+                  <strong class="card__pricetag design__pricetag">150 руб / м<sup>2</sup></strong>
                   <!-- /.card__pricetag -->
                 </div>
                 <!-- /.card__text -->
@@ -230,25 +230,25 @@
           <div class="card design__card">
             <img src="img/design/design-2.jpg" alt="Стандартный" class="card__image">
             <div class="card__text">
-                <h3 class="card__title">Стандартный</h3>
+                <h3 class="card__title card__minmargin">Стандартный</h3>
                 <!-- /.card__title -->
-                <ul class="card__list">
-                  <li class="card__item">Измерительные чертежи</li>
+                <ul class="card__list card__maxmargin">
+                  <li class="card__item">• Измерительные чертежи</li>
                   <!-- /.card__item -->
-                  <li class="card__item">Перепланировка</li>
+                  <li class="card__item">• Перепланировка</li>
                   <!-- /.card__item -->
-                  <li class="card__item">Планировка мебели</li>
+                  <li class="card__item">• Планировка мебели</li>
                   <!-- /.card__item -->
-                  <li class="card__item">План потолков</li>
+                  <li class="card__item">• План потолков</li>
                   <!-- /.card__item -->
-                  <li class="card__item">План этажей</li>
+                  <li class="card__item">• План этажей</li>
                   <!-- /.card__item -->
-                  <li class="card__item">План электрики</li>
+                  <li class="card__item">• План электрики</li>
                   <!-- /.card__item -->
-                  <li class="card__item">План света</li>
+                  <li class="card__item">• План света</li>
                 </ul>
                 <!-- /.card__list -->
-                <strong class="card__pricetag">400 руб / м<sup>2</sup></strong>
+                <strong class="card__pricetag design__pricetag">400 руб / м<sup>2</sup></strong>
                 <!-- /.card__pricetag -->
               </div>
               <!-- /.card__text -->
@@ -260,36 +260,36 @@
           <div class="card design__card">
             <img src="img/design/design-3.jpg" alt="Полный" class="card__image">
             <div class="card__text">
-             <h3 class="card__title design__title">Полный</h3>
+             <h3 class="card__title card__minmargin design__title">Полный</h3>
               <!-- /.card__title -->
-              <ul class="card__list">
-                <li class="card__item">Измерительные чертежи</li>
+              <ul class="card__list card__minmargin">
+                <li class="card__item">• Измерительные чертежи</li>
                 <!-- /.card__item -->
-                <li class="card__item">Перепланировка</li>
+                <li class="card__item">• Перепланировка</li>
                 <!-- /.card__item -->
-                <li class="card__item">Планировка мебели</li>
+                <li class="card__item">• Планировка мебели</li>
                 <!-- /.card__item -->
-                <li class="card__item">План потолков</li>
+                <li class="card__item">• План потолков</li>
                 <!-- /.card__item -->
-                <li class="card__item">План этажей</li>
+                <li class="card__item">• План этажей</li>
                 <!-- /.card__item -->
-                <li class="card__item">План электрики</li>
+                <li class="card__item">• План электрики</li>
                 <!-- /.card__item -->
-                <li class="card__item">План света</li>
+                <li class="card__item">• План света</li>
                 <!-- /.card__item -->
-                <li class="card__item">Стенные развертки</li>
+                <li class="card__item">• Стенные развертки</li>
                 <!-- /.card__item -->
-                <li class="card__item">3D визуализация</li>
+                <li class="card__item">• 3D визуализация</li>
                 <!-- /.card__item -->
-                <li class="card__item">Смета на материалы</li>
+                <li class="card__item">• Смета на материалы</li>
                 <!-- /.card__item -->
-                <li class="card__item">Выезд на подбор материалов</li>
+                <li class="card__item">• Выезд на подбор материалов</li>
                 <!-- /.card__item -->
-                <li class="card__item">Выбор мебели</li>
+                <li class="card__item">• Выбор мебели</li>
                 <!-- /.card__item -->
               </ul>
               <!-- /.card__list -->
-            <strong class="card__pricetag">900 руб / м<sup>2</sup></strong>
+            <strong class="card__pricetag design__pricetag">900 руб / м<sup>2</sup></strong>
             <!-- /.card__pricetag -->
           </div>
           <!-- /.card__text -->
